[FIX] mail: danger/success effect for actions
PR #224976 fixes the demonstration of an action with a `DANGER` tag in the
dropdown menu in the action list. Such an action may not be located in the
dropdown, but rather in the quick action menu. This change ensures that the
action buttons with `DANGER` or `SUCCESS` tags are demonstrated properly in
either case.

Steps to reproduce:
- Open a document in the portal as a portal user.
- Send a message and hover over the message.
- The `delete` button is not visible in the action list.

closes odoo/odoo#245729

X-original-commit: 3be8d68734a681042754a3b8d378d985913d96d8

--- a/addons/mail/static/src/core/common/message.scss
+++ b/addons/mail/static/src/core/common/message.scss
@@ -141,6 +141,10 @@
     --o-mail-ActionList-Button-opacity--hover: 1;
     --o-mail-ActionList-Button-color--hover: var(--mail-Message-actionIconHoveredColor, black);
 
+    .btn-danger, .btn-success {
+        --o-mail-ActionList-Button-opacity: .5;
+    }
+
     i {
         font-size: 1rem;
     }
